[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r42444

--- a/debian/po/pl.po
+++ b/debian/po/pl.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-21 19:52+0200\n"
+"PO-Revision-Date: 2006-11-02 13:30+0100\n"
 "Last-Translator: Bartosz Fenski <fenio@debian.org>\n"
 "Language-Team: Polish <pddp@debian.linux.org.pl>\n"
 "MIME-Version: 1.0\n"
@@ -30,7 +30,6 @@ msgstr "Kontynuuj bez programu uruchomieniowego"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
@@ -38,18 +37,17 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "By móc uruchamiać nowy system automatycznie, należy ustawić pewne zmienne w "
-"Pegasos OpenFirmware. Po zakończeniu instalacji, system zostanie ponownie "
-"uruchomiony. Przy znaku zachęty Pegasos OpenFirmware ustaw następujące "
-"zmienne OpenFirmware by uaktywnić automatyczne uruchamianie:"
+"Genesi firmware. Po zakończeniu instalacji, system zostanie ponownie "
+"uruchomiony. Przy znaku zachęty firmware ustaw następujące zmienne by "
+"uaktywnić automatyczne uruchamianie:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Alternatywnie możesz uruchomić jądro ręcznie wprowadzając :"
+msgstr "Alternatywnie możesz uruchomić jądro ręcznie wprowadzając:"
 
 #. Type: note
 #. Description
@@ -77,13 +75,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Będziesz musiał zrobić to tylko raz. Później wprowadź polecenie \"boot\" lub "
-"uruchom ponownie komputer by przejść do następnego etapu instalacji."
+"Trzeba to wykonać tylko raz. Później wprowadź polecenie \"boot\" lub uruchom "
+"ponownie komputer by przejść do nowo zainstalowanego systemu."
 
 #. Type: note
 #. Description
@@ -108,5 +105,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Będziesz musiał uruchamiać system ręcznie z użyciem jądra ${KERNEL}, z "
+"Trzeba będzie uruchamiać system ręcznie z użyciem jądra ${KERNEL}, z "
 "partycji ${BOOT}, przekazując ${ROOT} jako jego argument."
