--- a/debian/po/eo.po
+++ b/debian/po/eo.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: eo\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-10-03 01:26+0200\n"
+"PO-Revision-Date: 2006-11-02 20:25+0100\n"
 "Last-Translator: Serge Leblanc <serge.leblanc@wanadoo.fr>\n"
 "Language-Team: Esperanto <debian-l10n-esperanto@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -50,7 +50,7 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"Alimaniere, vi povos mane ekŝargi la kernon per enskribu, dum la firmvara "
+"Alimaniere, vi povos mane ekŝargi la kernon per enskribo, dum la firmvara "
 "invito:"
 
 #. Type: note
@@ -69,11 +69,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Kelkaj variabloj en la firmvaro 'Netwinder NeTTrom' bezonas agordaĵon por "
-"aŭtomate startigi Linukson. La sistemo reŝargiĝos post ĉi tiu instalada fazo "
-"kaj la firmvaro strebos de ekfunkcii aŭtomate. Tiu ekfunkcio eble ĉesigu per "
-"tajpi ajnan klavon. Tiuokaze, vi alkondukos inviton de 'NeTTrom' kie vi "
-"plenumendos la sekvantajn ordonojn:"
+"Kelkaj variabloj en la firmvaro 'Netwinder NeTTrom' bezonas agordon por "
+"aŭtomate startigi Linukson. La sistemo reŝargiĝos post tiu instalada fazo "
+"kaj la firmvaro strebos ekfunkcii aŭtomate. Tiun ekfunkciadon eble vi "
+"ĉesigos tajpante ajnan klavon. Tio kondukos vin al invito de 'NeTTrom' kie "
+"vi devos plenumi la sekvantajn ordonojn:"
 
 #. Type: note
 #. Description
@@ -82,14 +82,14 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Tiu ordono nur plenumendos unue. Poste, tajpu la \"boot\" komando aŭ reŝargu "
-"la sistemon por uzi la novan instalitan 'Debian GNU/Linux'-distribuon."
+"Nur tiun ordonon vi devos plenumi unue. Poste, tajpu la \"boot\" komandon aŭ "
+"reŝargu la sistemon por uzi la novan instalitan sistemon."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:51
 msgid "No boot loader installed"
-msgstr "Neniu instala ekŝargilo"
+msgstr "Neniu instalita ekŝargilo"
 
 #. Type: note
 #. Description
