--- a/debian/po/nn.po
+++ b/debian/po/nn.po
@@ -3,26 +3,26 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of nn.po to Norwegian Nynorsk
-# translation of debian-installer.po to Norwegian nynorsk
+# translation of nn.po to Norwegian nynorsk
 # Norwegian Nynorsk messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
-# Håvard Korsvoll <korsvoll@skulelinux.no>, 2004, 2005, 2006.
 #
+# Håvard Korsvoll <korsvoll@skulelinux.no>, 2004, 2005, 2006.
+# Håvard Korsvoll <korsvoll@gmail.com>, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: nn\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-06-19 11:01+0200\n"
-"Last-Translator: Håvard Korsvoll <korsvoll@skulelinux.no>\n"
-"Language-Team: Norwegian Nynorsk <nn@li.org>\n"
+"PO-Revision-Date: 2006-11-08 23:46+0100\n"
+"Last-Translator: Håvard Korsvoll <korsvoll@gmail.com>\n"
+"Language-Team: Norwegian nynorsk <i18n-nn@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "nynorsk@lists.debian.org>\n"
-"X-Generator: KBabel 1.10.2\n"
+"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #. Type: text
@@ -35,28 +35,26 @@ msgstr "Gå vidare utan oppstartslastar"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Nokre variablar må setjast i Pegasos OpenFirmware for at systemet ditt skal "
-"starte opp automatisk. Ved slutten av installasjonen vil systemet starte på "
-"nytt. På kommandolinja til Pegasos OpenFirmware kan du slå på automatisk "
-"oppstart ved å setje desse OpenFirmware-variablane:"
+"Nokre variablar må setjast i Genesis fastprogramvaren for at systemet ditt "
+"skal starte opp automatisk. Ved slutten av installasjonen vil systemet "
+"starte på nytt. På kommandolinja til fastprogramvaren kan du slå på "
+"automatisk oppstart ved å setje desse variablane:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
 "Alternativt, vil du vere i stand til å starte opp kjerna manuelt ved å "
-"skrive inn:"
+"skrive dette på kommandolinja til fastprogramvaren:"
 
 #. Type: note
 #. Description
@@ -83,14 +81,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Du vil måtte gjere dette berre ein gong. Etterpå skriv du inn «boot»-"
-"kommandoen eller start systemet på ny for å halde fram med det neste steget "
-"i installasjonen."
+"kommandoen eller start systemet på ny for å gå vidare til det nyinstallerte "
+"systemet ditt."
 
 #. Type: note
 #. Description
