--- a/debian/po/be.po
+++ b/debian/po/be.po
@@ -3,7 +3,7 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of be-20061012.po to Belarussian
+# translation of be-20061017-cristian-in.po to Belarusian
 #
 # Debian Installer master translation file template
 # Don't forget to properly fill-in the header of PO files#
@@ -11,14 +11,18 @@
 # in doc/i18n/i18n.txt#
 #
 # Andrei Darashenka <adorosh2@it.org.by>, 2005, 2006.
+# Pavel Piatruk <berserker@neolocation.com>, 2006.
+# Nasciona Piatrouskaja <naska1@tut.by>, 2006.
+# Hleb Rubanau <g.rubanau@gmail.com>, 2006.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: be-20061012\n"
+"Project-Id-Version: be\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-10-15 02:08+0200\n"
+"PO-Revision-Date: 2006-10-17 23:34+0300\n"
 "Last-Translator: Andrei Darashenka <adorosh2@it.org.by>\n"
-"Language-Team: Belarussian <be@li.org>\n"
+"Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -40,9 +44,9 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Варта вызначыць некаторыя параметры для прашыўкі Genesi, каб вашая сістэма "
+"Варта вызначыць некаторыя параметры для прашыўкі Genesi, каб Вашая сістэма "
 "магла аўтаматычна загружацца. Напрыканцы устаноўкі сістэма перазагрузіцца. У "
-"абалонцы прашыўкі, вызначце наступныя параметры каб дазволіць аўтаматычную "
+"абалонцы прашыўкі вызначце наступныя параметры, каб дазволіць аўтаматычную "
 "загрузку: "
 
 #. Type: note
@@ -51,13 +55,13 @@ msgstr ""
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Як варыянт, вы можаце загружаць ядро самастойна, уводзячы:"
+msgstr "Як варыянт, Вы можаце загружаць ядро самастойна, уводзячы: "
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
-msgstr "Настройка параметраў прашыўкі для аўтаматычнай загрузкі"
+msgstr "Наладка параметраў прашыўкі для аўтаматычнай загрузкі"
 
 #. Type: note
 #. Description
@@ -71,9 +75,10 @@ msgid ""
 msgstr ""
 "Трэба вызначыць некаторыя параметры для прашыўкі Netwinder NeTTrom, каб "
 "Вашая сістэма магла аўтаматычна загружаць linux. Пасля заканчэння устаноўкі, "
-"сістэма перазагрузіцца і прашыўка паспрабуе аўтазагрузку. Можна спыніць гэты "
-"працэс, націснуўшы на любую клавішу. Тады вы патрапіце у камандную абалонку "
-"NeTTrom дзе можна будзе запусціць такія каманды:"
+"сістэма перазагрузіцца і прашыўка паспрабуе аўтазагрузку. Можна будзе "
+"прымусова спыніць гэты працэс, націснуўшы на любую клавішу. Тады Вы "
+"патрапіце ў камандную абалонку NeTTrom, дзе можна будзе запусціць такія "
+"каманды:"
 
 #. Type: note
 #. Description
@@ -109,5 +114,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Вам трэба самастойна загрузіць ядро ${KERNEL} з раздзелу ${BOOT}, перадаўшы "
+"Вам трэба самастойна загрузіць ядро ${KERNEL} з падзелу ${BOOT}, перадаўшы "
 "радок ${ROOT} у якасці параметра ядра."
