--- a/debian/po/sl.po
+++ b/debian/po/sl.po
@@ -23,8 +23,8 @@ msgstr ""
 "Project-Id-Version: sl\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-06 23:07+0100\n"
-"Last-Translator: Jure Čuhalev <gandalf@owca.info>\n"
+"PO-Revision-Date: 2006-11-15 14:21+0100\n"
+"Last-Translator: Matej Kovačič <matej.kovacic@owca.info>\n"
 "Language-Team: Slovenian <lugos-slo@lugos.si>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -44,26 +44,23 @@ msgstr "Nadaljuj brez zagonskega nalagalnika"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Če želite samodejno zagnati Debian, je potrebno nastaviti nekaj spremenljivk "
-"v Pegasos OpenFirmware.  Na koncu namestitve se bo sistem ponovno zagnal.  "
-"Ob pozivniku Pegasos OpenFirmware nastavite sledeče OpenFirmware "
-"spremenljivke, da boste omogočili samodejni zagon:"
+"V Genesi firmwareu je potrebno nastaviti nekatere spremenljivke. Na koncu "
+"namestitve se bo sistem ponovno zagnal.  Ob pozivniku firmwarea nastavite "
+"sledeče spremenljivke, da boste omogočili samodejni zagon:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Vedite, da boste lahko pozneje zagnali jedro ročno z ukazom :"
+msgstr "Vedite, da boste lahko pozneje zagnali jedro ročno z ukazom:"
 
 #. Type: note
 #. Description
@@ -90,7 +87,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
