--- a/debian/po/nb.po
+++ b/debian/po/nb.po
@@ -17,7 +17,7 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-10-07 20:49+0200\n"
+"PO-Revision-Date: 2006-11-18 16:27+0100\n"
 "Last-Translator: Bjørn Steensrud <bjornst@powertech.no>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
@@ -74,7 +74,7 @@ msgid ""
 msgstr ""
 "Noen av variablene i fastprogrammet til Netwinder NeTTrom må angis for at "
 "systemet skal starte linux automatisk. På slutten av dette "
-"installasjonssteget vil systemet starte på nytt og fastprogrammet vil prøve "
+"installasjonsssteget vil systemet starte på nytt og fastprogrammet vil prøve "
 "å starte systemet automatisk. Du kan avslutte dette ved å trykke en eller "
 "annen tast, og havner da i meny-systemet til NeTTrom. Der skal du angi "
 "følgende kommandoer:"
