* Fix broken sed invocation reported in #395259 in a better way, avoiding   devfs path assumptions.
r42776

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nobootloader (1.15) UNRELEASED; urgency=low
+
+  * Fix broken sed invocation reported in #395259 in a better way, avoiding
+    devfs path assumptions.
+
+ -- Colin Watson <cjwatson@debian.org>  Wed, 22 Nov 2006 09:29:52 +0000
+
 nobootloader (1.14) unstable; urgency=low
 
   [ Sven Luther ]
