--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,20 @@
-nobootloader (1.15) UNRELEASED; urgency=low
+nobootloader (1.15) unstable; urgency=low
 
+  [ Colin Watson ]
   * Fix broken sed invocation reported in #395259 in a better way, avoiding
     devfs path assumptions.
 
- -- Colin Watson <cjwatson@debian.org>  Wed, 22 Nov 2006 09:29:52 +0000
+  [ Updated translations ]
+  * Bulgarian (bg.po) by Damyan Ivanov
+  * Bosnian (bs.po) by Safir Secerovic
+  * Esperanto (eo.po) by Serge Leblanc
+  * Kurdish (ku.po) by rizoye-xerzi
+  * Norwegian Bokmål (nb.po) by Bjørn Steensrud
+  * Norwegian Nynorsk (nn.po) by Håvard Korsvoll
+  * Polish (pl.po) by Bartosz Fenski
+  * Slovenian (sl.po) by Matej Kovačič
+
+ -- Frans Pop <fjp@debian.org>  Wed, 22 Nov 2006 15:12:22 +0100
 
 nobootloader (1.14) unstable; urgency=low
 
