[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r42890

--- a/debian/po/pa.po
+++ b/debian/po/pa.po
@@ -19,14 +19,14 @@ msgstr ""
 "Project-Id-Version: pa\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-07-18 12:11+0530\n"
+"PO-Revision-Date: 2006-11-25 12:39+0530\n"
 "Last-Translator: A S Alam <apbrar@gmail.com>\n"
 "Language-Team: Punjabi <fedora-trans-pa@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.2\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"X-Generator: KBabel 1.11.4\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. Type: text
 #. Description
@@ -38,25 +38,23 @@ msgstr "ਬੂਟ ਲੋਡਰ ਨਾਲ ਜਾਰੀ ਕਰੋ"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"ਕੁਝ ਵੇਰੀਬਲ ਤੁਹਾਡੇ ਸਿਸਟਮ ਨੂੰ ਸਵੈ ਹੀ ਡੇਬੀਅਨ ਬੂਟ ਕਰਨ ਲਈ Pegasos OpenFirmware ਵਿੱਚ "
-"ਨਿਰਧਾਰਿਤ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਇੰਸਟਾਲੇਸ਼ਨ ਦੇ ਅੰਤ ਵਿੱਚ ਸਿਸਟਮ ਮੁੜ ਚੱਲੇਗਾ। Pegasos OpenFirmware "
-"ਪ੍ਰਾਂਪਟਾਉਟ ਤੇ,ੈ ਸਵ-ਬੂਟਿੰਗ ਯੋਗ ਕਰਨ ਲਈ ਹੇਠਲੇ OpenFirmware ਵੇਰੀਬਲ ਨਿਰਧਾਰਿਤ ਕਰੋ:"
+"ਕੁਝ ਵੇਰੀਬਲ ਤੁਹਾਡੇ ਸਿਸਟਮ ਨੂੰ ਸਵੈ ਹੀ ਡੇਬੀਅਨ ਬੂਟ ਕਰਨ ਲਈ Genesi firmware ਵਿੱਚ ਨਿਰਧਾਰਿਤ ਕਰਨ "
+"ਦੀ ਲੋੜ ਹੈ।  ਇੰਸਟਾਲੇਸ਼ਨ ਦੇ ਅੰਤ ਵਿੱਚ ਸਿਸਟਮ ਮੁੜ ਚੱਲੇਗਾ। firmware ਪਰਾਉਟ ਤੇ, ਸਵੈ-ਬੂਟਿੰਗ ਯੋਗ ਕਰਨ "
+"ਲਈ ਹੇਠਲੇ firmware ਵੇਰੀਬਲ ਦਿਓ:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "ਨਾਲ ਹੀ, ਤੁਸੀਂ ਇਹ ਭਰਕੇ ਕਰਨਲ ਨੂੰ ਦਸਤੀ ਬੂਟ ਕਰਨ ਦੇ ਯੋਗ ਹੋਵੋਗੇ:"
+msgstr "ਬਦਲਵੇਂ ਰੂਪ ਵਿੱਚ ਤੁਸੀਂ ਫਾਇਰਵਾਇਰ ਪਰਾਊਟ ਉੱਤੇ ਕਰਨਲ ਨੂੰ ਹੇਠ ਦਿੱਤੇ ਮੁੱਲ ਦੇ ਕੇ ਬੂਟ ਕਰ ਸਕਦੇ ਹੋ:"
 
 #. Type: note
 #. Description
@@ -82,13 +80,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "ਤੁਹਾਨੂੰ ਇਹ ਸਿਰਫ ਇੱਕ ਵਾਰ ਕਰਨਾ ਪਵੇਗਾ। ਬਾਅਦ ਵਿੱਚ, \"boot\" ਕਮਾਂਡ ਦਿਓ ਜਾਂ ਸਿਸਟਮ ਨੂੰ ਅਗਲੀ "
-"ਇੰਸਟਾਲੇਸ਼ਨ ਸਥਿਤੀ ਜਾਰੀ ਕਰਨ ਲਈ ਮੁੜ ਚਲਾਓ।"
+"ਇੰਸਟਾਲੇਸ਼ਨ ਜਾਰੀ ਕਰਨ ਲਈ ਮੁੜ ਚਲਾਓ।"
 
 #. Type: note
 #. Description
