[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r42911

--- a/debian/po/ca.po
+++ b/debian/po/ca.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: debian-installer etch\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-10-11 11:20+0200\n"
+"PO-Revision-Date: 2006-11-03 14:57+0100\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -102,8 +102,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"No s'ha instal·lat cap carregador, bé perque heu triat no instal·lar-lo, o "
-"perque la vostra arquitectura específica encara no suporta un carregador."
+"No s'ha instal·lat cap carregador, bé perquè heu triat no instal·lar-lo, o "
+"perquè la vostra arquitectura específica encara no suporta un carregador."
 
 #. Type: note
 #. Description
