--- a/debian/po/lv.po
+++ b/debian/po/lv.po
@@ -13,15 +13,13 @@ msgstr ""
 "Project-Id-Version: lv\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-08 19:09+0200\n"
+"PO-Revision-Date: 2006-12-01 18:14+0000\n"
 "Last-Translator: Aigars Mahinovs <aigarius@debian.org>\n"
 "Language-Team: Latvian <locale@laka.lv>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.2\n"
-"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n != 0 ? 1 : "
-"2);\n"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n != 0 ? 1 : \n"
 
 #. Type: text
 #. Description
@@ -33,22 +31,20 @@ msgstr "Turpināt bez sāknētāja"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Lai jūsu sistēma varētu sāknēties automātiski Pegasos OpenFirmware ir "
-"jānorāda daži mainīgie. Šīs instalācijas beigās sistēma pārsāknēsies. Lai "
-"aktivizetu automātisko sāknēšanos Pegasos OpenFirmware iestatījumu izvēlnē "
-"izstādiet sekojošus OpenFirmware mainīgos:"
+"Lai jūsu sistēma varētu sāknēties automātiski Genesi firmware ir jānorāda "
+"daži mainīgie. Šīs instalācijas beigās sistēma pārsāknēsies. Lai aktivizetu "
+"automātisko sāknēšanos firmware iestatījumu izvēlnē izstādiet sekojošus "
+"firmware mainīgos:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
@@ -81,14 +77,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "To jums vajadzēs izdarīt tikai vienu reizi, vēlāk varēsiet vienkārši ievadīt "
 "\"boot\" komandu vai pārsāknēt datoru, lai pārietu uz nākamo instalācijas "
-"soli."
+"soli vai ielādētu jūsu jauno sistēmu."
 
 #. Type: note
 #. Description
