[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r43151

--- a/debian/po/ku.po
+++ b/debian/po/ku.po
@@ -12,12 +12,13 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-11-14 12:00+0000\n"
-"Last-Translator: rizoye-xerzi <rizoxerzi@gmail.com>\n"
+"PO-Revision-Date: 2006-12-04 03:37+0100\n"
+"Last-Translator: Erdal Ronahi <erdal.ronahi@gmail.com>\n"
 "Language-Team: Kurdish <gnu-ku-wergerandin@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Rosetta-Export-Date: 2006-12-02 05:38+0000\n"
 
 #. Type: text
 #. Description
@@ -39,13 +40,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"Wekî alternatîf, tu dikarî vê rêzikê binivîse û pêşbarkirina pergala bi "
-"desta n bide destpêkirin:"
+"Wekî çare tu dikarî vê rêzikê binivîsî û dendikê (kernel) bi destan lê bar "
+"bikî:"
 
 #. Type: note
 #. Description
@@ -68,14 +68,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Vî karî tenê tu dikarî carekê bike. Di rewşên dûre de fermana \"boot\" "
-"binivîse yan jî bi merhaleya sazkirinê ya dûre re ji bo domandinê pergala "
-"xwe ji nû ve bide destpêkirin."
+"Ev tenê carekê pêwist e. Di rewşên din de fermana \"boot\" binivîse an jî di "
+"gava piştre ya sazkirinê de ji bo berdewamiyê pergalê ji nû ve bide "
+"destpêkirin."
 
 #. Type: note
 #. Description
