--- a/debian/po/be.po
+++ b/debian/po/be.po
@@ -12,7 +12,7 @@
 #
 # Andrei Darashenka <adorosh2@it.org.by>, 2005, 2006.
 # Pavel Piatruk <berserker@neolocation.com>, 2006.
-# Nasciona Piatrouskaja <naska1@tut.by>, 2006.
+# Nasciona Piatrouskaja <naska.pet@gmail.com>, 2006.
 # Hleb Rubanau <g.rubanau@gmail.com>, 2006.
 #
 msgid ""
@@ -20,8 +20,8 @@ msgstr ""
 "Project-Id-Version: be\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-10-17 23:34+0300\n"
-"Last-Translator: Andrei Darashenka <adorosh2@it.org.by>\n"
+"PO-Revision-Date: 2006-12-10 23:34+0300\n"
+"Last-Translator: Pavel Piatruk <berserker@neolocation.com>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -45,7 +45,7 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "Варта вызначыць некаторыя параметры для прашыўкі Genesi, каб Вашая сістэма "
-"магла аўтаматычна загружацца. Напрыканцы устаноўкі сістэма перазагрузіцца. У "
+"магла аўтаматычна загружацца. Напрыканцы ўстаноўкі сістэма перазагрузіцца. У "
 "абалонцы прашыўкі вызначце наступныя параметры, каб дазволіць аўтаматычную "
 "загрузку: "
 
@@ -74,11 +74,10 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Трэба вызначыць некаторыя параметры для прашыўкі Netwinder NeTTrom, каб "
-"Вашая сістэма магла аўтаматычна загружаць linux. Пасля заканчэння устаноўкі, "
-"сістэма перазагрузіцца і прашыўка паспрабуе аўтазагрузку. Можна будзе "
-"прымусова спыніць гэты працэс, націснуўшы на любую клавішу. Тады Вы "
-"патрапіце ў камандную абалонку NeTTrom, дзе можна будзе запусціць такія "
-"каманды:"
+"Вашая сістэма магла аўтаматычна загружаць linux. Пасля заканчэння устаноўкі "
+"сістэма перазагрузіцца, і прашыўка паспрабуе аўтазагрузку. Можна будзе "
+"прымусова спыніць гэты працэс, націснуўшы на любую клавішу. Тады Вы трапіце "
+"ў камандную абалонку NeTTrom, дзе можна будзе запусціць такія каманды:"
 
 #. Type: note
 #. Description
@@ -104,8 +103,7 @@ msgid ""
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
 "Не усталявана ніякага загрузчыка. Магчыма, гэта быў Ваш выбар пры ўстаноўцы. "
-"У іншым выпадку гэта значыць, што Вашая архітэктура не падтрымлівае "
-"загрузчык."
+"У іншым выпадку гэта значыць, што Ваша архітэктура не падтрымлівае загрузчык."
 
 #. Type: note
 #. Description
@@ -114,5 +112,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Вам трэба самастойна загрузіць ядро ${KERNEL} з падзелу ${BOOT}, перадаўшы "
+"Вам трэба самастойна загрузіць ядро ${KERNEL} з падзела ${BOOT}, перадаўшы "
 "радок ${ROOT} у якасці параметра ядра."
