[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r43473

--- a/debian/po/ku.po
+++ b/debian/po/ku.po
@@ -12,13 +12,13 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-12-04 03:37+0100\n"
-"Last-Translator: Erdal Ronahi <erdal.ronahi@gmail.com>\n"
+"PO-Revision-Date: 2006-12-11 09:30+0000\n"
+"Last-Translator: rizoye-xerzi <rizoxerzi@gmail.com>\n"
 "Language-Team: Kurdish <gnu-ku-wergerandin@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Rosetta-Export-Date: 2006-12-02 05:38+0000\n"
+"X-Rosetta-Export-Date: 2006-12-12 00:08+0000\n"
 
 #. Type: text
 #. Description
@@ -89,6 +89,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
+"ti barkerê boot nehatiye destnîşankirin an ji ber te wiha hilbijartiye an jî "
+"ji ber endezeya pergala te destekê nade."
 
 #. Type: note
 #. Description
@@ -97,3 +99,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
+"Tu mecbûrî ku bi destan boot bikî bi kakila  ${KERNEL} li ser beşa  ${BOOT} "
+"û bi derbaskirina ${ROOT} wek daneya kakilê."
