--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-26 22:46+0200\n"
+"PO-Revision-Date: 2006-10-13 23:05+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -44,10 +44,10 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Certaines variables doivent être positionnées dans le micro-code Genesi afin "
+"Certaines variables doivent être positionnées dans le microcode Genesi afin "
 "que votre système puisse démarrer automatiquement. À la fin de cette étape "
-"d'installation, le système redémarrera. À l'invite du micro-code, "
-"positionnez les variables suivantes pour activer le démarrage automatique :"
+"d'installation, le système redémarrera. À l'invite du microcode, positionnez "
+"les variables suivantes pour activer le démarrage automatique :"
 
 #. Type: note
 #. Description
@@ -57,13 +57,13 @@ msgid ""
 "the firmware prompt:"
 msgstr ""
 "Le noyau pourra également être démarré manuellement avec (à la ligne de "
-"commande du micro-code) :"
+"commande du microcode) :"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
-msgstr "Réglage des variables du micro-code pour démarrer automatiquement"
+msgstr "Réglage des variables du microcode pour démarrer automatiquement"
 
 #. Type: note
 #. Description
@@ -75,7 +75,7 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Certaines variables doivent être positionnées dans le micro-code "
+"Certaines variables doivent être positionnées dans le microcode "
 "(« firmware ») NeTTrom du Netwinder afin que votre système puisse démarrer "
 "automatiquement. À la fin de cette étape d'installation, le système "
 "redémarrera et le code logiciel tentera un démarrage automatique. Ce "
