[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r43508

--- a/debian/po/ku.po
+++ b/debian/po/ku.po
@@ -7,18 +7,19 @@
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
 #
+# Main translator: Rizoyê Xerzî <riza.seckin@gmail.com>
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-12-11 09:30+0000\n"
-"Last-Translator: rizoye-xerzi <rizoxerzi@gmail.com>\n"
+"PO-Revision-Date: 2006-12-24 12:56+0200\n"
+"Last-Translator: Amed Çeko Jiyan <amedcj@gmail.com>\n"
 "Language-Team: Kurdish <gnu-ku-wergerandin@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Rosetta-Export-Date: 2006-12-12 00:08+0000\n"
+"X-Rosetta-Export-Date: 2006-12-02 05:38+0000\n"
 
 #. Type: text
 #. Description
@@ -36,6 +37,10 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
+"Ji bo ku pergala te Linuksê bixweber boot bike divê hin guherbar di  Genesi "
+"firmware ya têkûz de bên mîhenkirin. Di dawiya vê gava sazkirinê de dê "
+"pergal ji nû ve bê destpêkirin. Ji bo boota bixweber, di dema firmwire'yê de "
+"van guherbarên firmwire mîheng bike:"
 
 #. Type: note
 #. Description
@@ -64,6 +69,12 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
+"Ji bo ku pergala te Linuksê bixweber boot bike divê hin guherbar di "
+"Netwinder NeTTrom firmware ya têkûz de bên mîhenkirin.Di dawiya vê gava "
+"sazkirinê de dê pergal ji nû ve bê destpêkirin û dê firmware boota bixweber "
+"biceribîne. Bi pêlkirina bişkojka ku dixwazî dikarî vê yekê betal bikî. Dû "
+"re tu yê têkevî pergala fermanan a NeTTromê ku divê di wir de van fermanan "
+"bisepînî:"
 
 #. Type: note
 #. Description
@@ -89,8 +100,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"ti barkerê boot nehatiye destnîşankirin an ji ber te wiha hilbijartiye an jî "
-"ji ber endezeya pergala te destekê nade."
+"An ji ber ku te hilnebijart an jî ji ber avakirina te ya kesane hê barkereke "
+"boot destek nake, tu barkereke boot nehat sazkirin."
 
 #. Type: note
 #. Description
@@ -99,5 +110,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Tu mecbûrî ku bi destan boot bikî bi kakila  ${KERNEL} li ser beşa  ${BOOT} "
-"û bi derbaskirina ${ROOT} wek daneya kakilê."
+"Dema di navbera beşê ${BOOT} û ${ROOT} lihevnekirinek derket, dê pêdiviya te "
+"bi bootkirina bi destan hebe."
