[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r43768

--- a/debian/po/ml.po
+++ b/debian/po/ml.po
@@ -5,7 +5,8 @@
 # 
 # translation of ml.po to malayalam
 # http://fci.wikia.com/wiki/Debian/മലയാളം/ഇന്സ്റ്റാളര്‍/ലെവല്‍1/മാസ്റ്റര്‍/ml.po
-# Contributors: Praveen A <pravi.a@gmail.com>, Santhosh, Sreejith
+# Copyright (c)  2006 Praveen A <pravi.a@gmail.com>, Santhosh Thottingal <santhosh00@gmail.com>, Sreejith :: ശ്രീജിത്ത് കെ <sreejithk2000@gmail.com> and Debian Project
+# Credits:  V Sasi Kumar, Sreejith N and Seena N
 #
 # Debian Installer master translation file template
 # Don't forget to properly fill-in the header of PO files
@@ -18,7 +19,7 @@ msgstr ""
 "Project-Id-Version: ml\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-11-23 14:33+0530\n"
+"PO-Revision-Date: 2006-12-03 15:43+0530\n"
 "Last-Translator: Praveen A <pravi.a@gmail.com>\n"
 "Language-Team: malayalam <smc-discuss@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -43,7 +44,7 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "നിങ്ങളുടെ സിസ്റ്റം സ്വയം ബൂട്ട് ചെയ്യുന്നതിന് ജെനസി ഫേംവെയറില്‍ ചില വാരിയബ്ള്സ് സെറ്റ് "
-"ചെയ്യേണ്ടതായുണ്ട്. ഇന്സ്റ്റളേഷനവസാനം സിസ്റ്റം റീബൂട്ട് ചെയ്യും. ഓട്ടോ-ബൂട്ടിങ്ങ് ഇനേബ്ള്‍ ചെയ്യാന്‍ "
+"ചെയ്യേണ്ടതായുണ്ട്. ഇന്സ്റ്റലേഷനവസാനം സിസ്റ്റം റീബൂട്ട് ചെയ്യും. ഓട്ടോ-ബൂട്ടിങ്ങ് ഇനേബ്ള്‍ ചെയ്യാന്‍ "
 "ഫേംവെയര്‍ പ്രോംപ്റ്റില്‍ താഴെ കൊടുത്തിരിക്കുന്ന ഫേംവെയര്‍ വാരിയബ്ള്സ് സെറ്റ് ചെയ്യുക:"
 
 #. Type: note
@@ -73,7 +74,7 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "നിങ്ങളുടെ സിസ്റ്റം ലിനക്സ് സ്വയം ബൂട്ട് ചെയ്യാനായി Netwinder NeTTrom ഫേംവെയറില്‍ ചില "
-"വാരിയബിള്സ് സെറ്റ് ചെയ്യേണ്ടതുണ്ട്. ഇന്സ്റ്റളേഷനവസാനം സിസ്റ്റം റീബൂട്ട് ചെയ്യുകയും ഫേംവെയര്‍ സ്വയം "
+"വാരിയബിള്സ് സെറ്റ് ചെയ്യേണ്ടതുണ്ട്. ഇന്സ്റ്റലേഷനവസാനം സിസ്റ്റം റീബൂട്ട് ചെയ്യുകയും ഫേംവെയര്‍ സ്വയം "
 "ബൂട്ട് ചെയ്യാനായി ശ്രമിക്കുകയും ചെയ്യും. നിങ്ങള്ക്ക് ഇതില്‍ നിന്നും പിന്തിരിയാന്‍ ഏതെങ്കിലും കീ "
 "അമര്ത്താം. നിങ്ങള്‍ NeTTrom കമാന്റ് സിസ്റ്റത്തിലെത്തും അവിടെ നിങ്ങള്ക്ക് താഴെ പറയുന്ന കമാന്റുകള്‍ "
 "പ്രവര്ത്തിപ്പിക്കേണ്ടതായി വരും:"
