--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -4,24 +4,25 @@
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
 # Danish messages for debian-installer.
-# Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
 #
-# Claus Hindsgaul <claus_h@image.dk>, 2004, 2005, 2006.
-# Claus Hindsgaul <claus.hindsgaul@gmail.com>, 2006.
+#
+# Claus Hindsgaul <claus.hindsgaul@gmail.com>, 2004-2007.
+# Reviewed 2007 by Niels Rasmussen
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-27 13:07+0200\n"
+"PO-Revision-Date: 2007-01-03 22:21+0100\n"
 "Last-Translator: Claus Hindsgaul <claus.hindsgaul@gmail.com>\n"
 "Language-Team: Danish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Poedit-Bookmarks: 282,1006,1041,-1,-1,-1,-1,-1,-1,-1\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #. Type: text
 #. Description
@@ -39,9 +40,9 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Der skal sættes nogle variable i Genesi-firmwaren, for at dit system kan "
+"Der skal sættes nogle variabler i Genesi-firmwaren, for at dit system kan "
 "starte op automatisk. Ved afslutningen af installationen vil systemet "
-"genstarte. Sæt følgende OpenFirmware-variable ved firmware-prompten for at "
+"genstarte. Sæt følgende OpenFirmware-variabler ved firmware-prompten for at "
 "aktivere automatisk opstart:"
 
 #. Type: note
@@ -70,7 +71,7 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Der skal sættes nogle variable i Netwinder NeTTrom-firmwaren for at dit "
+"Der skal sættes nogle variabler i Netwinder NeTTrom-firmwaren for at dit "
 "system kan starte Linux op automatisk. Ved afslutningen af dette "
 "installationsstadium vil systemet genstarte, og firmwaren vil forsøge at "
 "genstarte automatisk. Du kan afbryde dette ved et tryk på en tast. Det vil "
