[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r43848

--- a/debian/po/sl.po
+++ b/debian/po/sl.po
@@ -23,7 +23,7 @@ msgstr ""
 "Project-Id-Version: sl\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-11-15 14:21+0100\n"
+"PO-Revision-Date: 2007-01-04 09:47+0100\n"
 "Last-Translator: Matej Kovačič <matej.kovacic@owca.info>\n"
 "Language-Team: Slovenian <lugos-slo@lugos.si>\n"
 "MIME-Version: 1.0\n"
@@ -51,7 +51,7 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "V Genesi firmwareu je potrebno nastaviti nekatere spremenljivke. Na koncu "
-"namestitve se bo sistem ponovno zagnal.  Ob pozivniku firmwarea nastavite "
+"namestitve se bo sistem ponovno zagnal. Ob pozivniku firmwarea nastavite "
 "sledeče spremenljivke, da boste omogočili samodejni zagon:"
 
 #. Type: note
@@ -79,9 +79,9 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Če želite samodejno zagnati Debian, je potrebno nastaviti nekaj spremenljivk "
-"v firmware opremi Netwinder NeTTrom.  Na koncu namestitve se bo sistem "
-"ponovno zagnal in poskusil s samozagonom.  Prekličete ga lahko s poljubno "
-"tipko.  Pristali boste v ukaznem sistemu NeTTrom, kjer morate izvesti "
+"v firmware opremi Netwinder NeTTrom. Na koncu namestitve se bo sistem "
+"ponovno zagnal in poskusil s samozagonom. Prekličete ga lahko s poljubno "
+"tipko. Pristali boste v ukaznem sistemu NeTTrom, kjer morate izvesti "
 "naslednje ukaze:"
 
 #. Type: note
@@ -99,7 +99,7 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:51
 msgid "No boot loader installed"
-msgstr "Ni nameščenih zagonskih nalagalnikov"
+msgstr "Ni nameščenega nobenega zagonskega nalagalnika"
 
 #. Type: note
 #. Description
@@ -108,8 +108,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Ni nameščenih zagonskih nalagalnikov, ker ga niste želeli namestiti ali pa "
-"ga vaša arhitektura še ne podpira."
+"Ni nameščenega nobenega zagonskega nalagalnika, ker ga niste želeli "
+"namestiti ali pa ga vaša arhitektura še ne podpira."
 
 #. Type: note
 #. Description
@@ -118,5 +118,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Zagnati boste mogli ročno z jedrom ${KERNEL} na razdelkih ${BOOT} in "
-"${ROOT}, podanih kot argumenti jedra."
+"Sistem boste morali zagnati ročno z jedrom ${KERNEL} na razdelku ${BOOT} in "
+"z ${ROOT}, kot podanemu argumentu jedra."
